--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav>
-      <a href="#">WebStudio</a>
+      <a href="#"> <span>Web</span>Studio</a>
       <ul>
         <li><a href="./index.html">Студія</a></li>
         <li><a href="./portfolio.html">Портфоліо</a></li>
@@ -104,7 +104,7 @@
     </section>
   </main>
   <footer>
-    <a href="#">WebStudio</a>
+    <a href="#"> <span>Web</span>Studio</a>
     <address>
       <ul>
         <li>
