--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <nav>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span>Web</span>Studio</a>
       <ul>
         <li><a href="./index.html">Студія</a></li>
         <li><a href="./portfolio.html">Портфоліо</a></li>
@@ -89,7 +89,7 @@
     </section>
   </main>
   <footer>
-    <a href="./index.html">WebStudio</a>
+    <a href="./index.html"><span>Web</span>Studio</a>
     <address>
       <ul>
         <li>
