--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav>
-      <a href="#"> <span>Web</span>Studio</a>
+      <a href="#"class="logo-header"><span>Web</span>Studio</a>
       <ul>
         <li><a href="./index.html">Студія</a></li>
         <li><a href="./portfolio.html">Портфоліо</a></li>
@@ -104,7 +104,8 @@
     </section>
   </main>
   <footer>
-    <a href="#"> <span>Web</span>Studio</a>
+    <section>
+    <a href="#"class="logo-footer"><span>Web</span>Studio</a>
     <address>
       <ul>
         <li>
@@ -114,5 +115,6 @@
         <li><a href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
       </ul>
     </address>
+  </section>
   </footer>
 </html>
