--- a/portfolio.html
+++ b/portfolio.html
@@ -11,29 +11,29 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a href="./index.html"><span>Web</span>Studio</a>
-      <ul>
-        <li><a href="./index.html">Студія</a></li>
-        <li><a href="./portfolio.html">Портфоліо</a></li>
-        <li><a href="#">Контакти</a></li>
+  <header class="header">
+    <nav class="nav">
+      <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
+      <ul class="nav-list">
+        <li><a class="nav-link" href="./index.html">Студія</a></li>
+        <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+        <li><a class=" nav-link" href="#">Контакти</a></li>
       </ul>
     </nav>
-    <ul>
-      <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+    <ul class="address-list">
+      <li><a class="address-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="address-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
     </ul>
   </header>
-  <main>
+  <main class="main">
     <!-- <h1>Панель пошуку</h1> -->
-    <section>
-      <ul>
-        <li><button>Усі</button></li>
-        <li><button>Веб-сайти</button></li>
-        <li><button>Додатки</button></li>
-        <li><button>Дизайн</button></li>
-        <li><button>Маркетинг</button></li>
+    <section class="portfolio">
+      <ul class="portfolio-list">
+        <li><button class="portfolio-button">Усі</button></li>
+        <li><button class="portfolio-button">Веб-сайти</button></li>
+        <li><button class="portfolio-button">Додатки</button></li>
+        <li><button class="portfolio-button">Дизайн</button></li>
+        <li><button class="portfolio-button">Маркетинг</button></li>
       </ul>
       <ul>
         <li><img src="./images/technocrack.jpg" alt="Технокряк" width="370">
