--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <header class="header">
     <nav class="nav">
-      <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="header-logo" href="./index.html"><span class="logo-span">Web</span>Studio</a>
       <ul class="nav-list">
         <li><a class="nav-link" href="./index.html">Студія</a></li>
         <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
@@ -35,71 +37,76 @@
         <li><button class="portfolio-button">Дизайн</button></li>
         <li><button class="portfolio-button">Маркетинг</button></li>
       </ul>
-      <ul>
-        <li><img src="./images/technocrack.jpg" alt="Технокряк" width="370">
-          <div>
-            <p>Технокряк</p>
-            <h3>Веб-сайт</h3>
+      <ul class="portfolio-list">
+        <li><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Технокряк</p>
+            <h3 class="portfolio-title">Веб-сайт</h3>
           </div>
         </li>
-        <li><img src="./images/new-orlean-vs-golden-star-poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-          <div>
-            <p>Постер New Orlean vs Golden Star</p>
-            <h3>Дизайн</h3>
+        <li><img class="portfolio-img" src="./images/new-orlean-vs-golden-star-poster.jpg"
+            alt="Постер New Orlean vs Golden Star" width="370">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Постер New Orlean vs Golden Star</p>
+            <h3 class="portfolio-title">Дизайн</h3>
           </div>
         </li>
-        <li><img src="./images/seafood-restaurant.jpg" alt="Ресторан Seafood" width="370">
-          <div>
-            <p>Ресторан Seafood</p>
-            <h3>Додаток</h3>
+        <li><img class="portfolio-img" src="./images/seafood-restaurant.jpg" alt="Ресторан Seafood" width="370"
+            height="294">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Ресторан Seafood</p>
+            <h3 class="portfolio-title">Додаток</h3>
           </div>
         </li>
-        <li><img src="./images/project-prime.jpg" alt="Проєкт Prime" width="370">
-          <div>
-            <p>Проєкт Prime</p>
-            <h3>Маркетинг</h3>
+        <li><img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime" width="370" height="294">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Проєкт Prime</p>
+            <h3 class="portfolio-title">Маркетинг</h3>
           </div>
         <li>
-          <img src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370">
-          <div>
-            <p>Проєкт Boxes</p>
-            <h3>Додаток</h3>
+          <img class="portfolio-img" src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370" height="294">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Проєкт Boxes</p>
+            <h3 class="portfolio-title">Додаток</h3>
           </div>
         </li>
-        <li><img src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370">
-          <div>
-            <p>Inspiration has no Borders</p>
-            <h3>Веб-сайт</h3>
+        <li><img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders"
+            width="370" height="294">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Inspiration has no Borders</p>
+            <h3 class="portfolio-title">Веб-сайт</h3>
           </div>
         </li>
-        <li><img src="./images/edition-limited-edition.jpg" alt="Видання Limited Edition" width="370">
-          <div>
-            <p>Видання Limited Edition</p>
-            <h3>Дизайн</h3>
+        <li><img class="portfolio-img" src="./images/edition-limited-edition.jpg" alt="Видання Limited Edition"
+            width="370" height="294">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Видання Limited Edition</p>
+            <h3 class="portfolio-title">Дизайн</h3>
           </div>
         </li>
-        <li><img src="./images/lab.jpg" alt="Проєкт LAB" width="370">
-          <div>
-            <p>Проєкт LAB</p>
-            <h3>Маркетинг</h3>
+        <li><img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370" height="294">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Проєкт LAB</p>
+            <h3 class="portfolio-title">Маркетинг</h3>
           </div>
-        <li><img src="./images/growing-business.jpg" alt="Growing Business" width="370">
-          <div>
-            <p>Growing Business</p>
-            <h3>Додаток</h3>
+        <li><img class="portfolio-img" src="./images/growing-business.jpg" alt="Growing Business" width="370"
+            height="294">
+          <div class="portfolio-box">
+            <p class="portfolio-description">Growing Business</p>
+            <h3 class="portfolio-title">Додаток</h3>
           </div>
       </ul>
     </section>
   </main>
-  <footer>
-    <a href="./index.html"><span>Web</span>Studio</a>
-    <address>
-      <ul>
+  <footer class="footer">
+    <a class="footer-logo" href="./index.html"><span class="footer-span">Web</span>Studio</a>
+    <address class="address">
+      <ul class="address-list">
         <li>
-          <p> м. Київ, пр-т Лесі Українки, 26 </p>
+          <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
         </li>
-        <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+        <li><a class="address-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="address-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
       </ul>
     </address>
   </footer>
