--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <nav class="nav">
       <a href="#" class="header-logo"><span class="logo-span">Web</span>Studio</a>
       <ul class="nav-list">
-        <li><a href="./index.html" class="nav-link">Студія</a></li>
-        <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-        <li><a href="#" class="nav-link"></a>Контакти</a></li>
+        <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
+        <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+        <li class="nav-item"><a href="#" class="nav-link"></a>Контакти</a></li>
       </ul>
     </nav>
     <ul class="nav">
-      <li><a href="malito:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-      <li><a href="tel:+38-096-111-11-11" class="address-link">+38-096-111-11-11</a></li>
+      <li class="contact-item"><a href="malito:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+      <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38-096-111-11-11</a></li>
     </ul>
   </header>
   <main class="main">
@@ -36,27 +36,27 @@
     <section class="features">
       <!-- Що ми пропонуємо  -->
       <ul class="features-list">
-        <li>
+        <li class="features-item">
           <h2 class="features-title">Увага до деталей</h2>
           <p class="features-description">
             Ідейні міркування, і навіть початок повсякденної роботи з
             формування позиції.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h2 class="features-title">Пунктуальність</h2>
           <p class="features-description">
             Завдання організації, особливо рамки і місце навчання кадрів тягне
             у себе.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h2 class="features-title">Планування</h2>
           <p class="features-description">
             Так само консультація з широким активом значною мірою зумовлює.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h2 class="features-title">Сучасні технології</h2>
           <p class="features-description">
             Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -70,9 +70,9 @@
 
       <h2 class="wat-we-do-title">Чим ми займаємося</h2>
       <ul class="wat-we-do-list">
-        <li><img class="wat-we-do-img" src="./images/web-design.jpg" alt="Веб-дизайн" width="370"height="294"></li>
-        <li><img class="wat-we-do-img" src="./images/development.jpg" alt="Розробка" width="370"height="294"></li>
-        <li><img class="wat-we-do-img" src="./images/branding.jpg" alt="Брендинг" width="370"height="294"></li>
+        <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/web-design.jpg" alt="Веб-дизайн" width="370"height="294"></li>
+        <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/development.jpg" alt="Розробка" width="370"height="294"></li>
+        <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/branding.jpg" alt="Брендинг" width="370"height="294"></li>
       </ul>
     </section>
     <section class="team">
@@ -81,28 +81,28 @@
 
       <h2 class="team-title">Наша команда</h2>
       <ul class="team-list">
-        <li>
+        <li class="team-item">
           <img class="team-img" src="./images/igor-demanko.jpg" alt="Ігор Дизайнер" width="270"height="260">
 
           <p class="team-description">Ігор Дем'яненко</p>
           <h2 class="team-title">Product Designer</h2>
 
         </li>
-        <li>
+        <li class="team-item">
           <img class="team-img" src="./images/olga-repina.jpg" alt="Олена Розробник" width="270"height="260">
 
           <p class="team-description">Ольга Рєпіна</p>
           <h2 class="team-title">Frontend Developer</h2>
 
         </li>
-        <li>
+        <li class="team-item">
           <img class="team-img" src="./images/mikola-tarasov.jpg" alt="Микола Маркетолог" width="270"height="260">
 
           <p class="team-description">Микола Тарасов</p>
           <h2 class="team-title">Marketing</h2>
 
         </li>
-        <li>
+        <li class="team-item">
           <img class="team-img" src="./images/mihailo.jpg" alt="Михайло Бренд-менеджер" width="270"height="260">
 
           <p class="team-description"> Михайло Єрмаков</p>
@@ -112,15 +112,15 @@
     </section>
   </main>
   <footer class="footer">
-    <section>
+    <section class="footer-content">
       <a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a>
       <address class="address">
         <ul class="address-list">
-          <li>
+          <li class="address-item">
             <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
           </li>
-          <li><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+          <li class="contact-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contact-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
         </ul>
       </address>
     </section>
