--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
   <header class="header">
     <nav class="nav">
@@ -32,7 +31,6 @@
       <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
       <button class="hero-button">Замовити послугу</button>
     </section>
-
     <section class="features">
       <!-- Що ми пропонуємо  -->
       <ul class="features-list">
@@ -79,32 +77,26 @@
 
       <!-- Наша команда -->
 
-      <h2 class="team-title">Наша команда</h2>
+      <h2 class="team-hero-title">Наша команда</h2>
       <ul class="team-list">
         <li class="team-item">
           <img class="team-img" src="./images/igor-demanko.jpg" alt="Ігор Дизайнер" width="270"height="260">
 
           <p class="team-description">Ігор Дем'яненко</p>
           <h2 class="team-title">Product Designer</h2>
-
         </li>
         <li class="team-item">
           <img class="team-img" src="./images/olga-repina.jpg" alt="Олена Розробник" width="270"height="260">
-
           <p class="team-description">Ольга Рєпіна</p>
           <h2 class="team-title">Frontend Developer</h2>
-
         </li>
         <li class="team-item">
           <img class="team-img" src="./images/mikola-tarasov.jpg" alt="Микола Маркетолог" width="270"height="260">
-
           <p class="team-description">Микола Тарасов</p>
           <h2 class="team-title">Marketing</h2>
-
         </li>
         <li class="team-item">
           <img class="team-img" src="./images/mihailo.jpg" alt="Михайло Бренд-менеджер" width="270"height="260">
-
           <p class="team-description"> Михайло Єрмаков</p>
           <h2 class="team-title">UI Designer</h2>
         </li>
@@ -125,5 +117,4 @@
       </address>
     </section>
   </footer>
-
 </html>
