--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="uk">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,20 +10,19 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
   <header class="header">
     <nav class="nav">
       <a class="header-logo" href="./index.html"><span class="logo-span">Web</span>Studio</a>
       <ul class="nav-list">
-        <li><a class="nav-link" href="./index.html">Студія</a></li>
-        <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
-        <li><a class=" nav-link" href="#">Контакти</a></li>
+        <li class="nav-item"><a class="nav-link" href="./index.html">Студія</a></li>
+        <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+        <li class="nav-item"><a class=" nav-link" href="#">Контакти</a></li>
       </ul>
     </nav>
     <ul class="address-list">
-      <li><a class="address-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="address-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+      <li class="contact-item"><a class="address-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="contact-item"><a class="address-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
     </ul>
   </header>
   <main class="main">
@@ -38,58 +36,58 @@
         <li><button class="portfolio-button">Маркетинг</button></li>
       </ul>
       <ul class="portfolio-list">
-        <li><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
+        <li class="portfolio-item"><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Технокряк</p>
             <h3 class="portfolio-title">Веб-сайт</h3>
           </div>
         </li>
-        <li><img class="portfolio-img" src="./images/new-orlean-vs-golden-star-poster.jpg"
+        <li class="portfolio-item"><img class="portfolio-img" src="./images/new-orlean-vs-golden-star-poster.jpg"
             alt="Постер New Orlean vs Golden Star" width="370">
           <div class="portfolio-box">
             <p class="portfolio-description">Постер New Orlean vs Golden Star</p>
             <h3 class="portfolio-title">Дизайн</h3>
           </div>
         </li>
-        <li><img class="portfolio-img" src="./images/seafood-restaurant.jpg" alt="Ресторан Seafood" width="370"
+        <li class="portfolio-item"><img class="portfolio-img" src="./images/seafood-restaurant.jpg" alt="Ресторан Seafood" width="370"
             height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Ресторан Seafood</p>
             <h3 class="portfolio-title">Додаток</h3>
           </div>
         </li>
-        <li><img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime" width="370" height="294">
+        <li class="portfolio-item"><img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime" width="370" height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Проєкт Prime</p>
             <h3 class="portfolio-title">Маркетинг</h3>
           </div>
-        <li>
+        <li class="portfolio-item">
           <img class="portfolio-img" src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370" height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Проєкт Boxes</p>
             <h3 class="portfolio-title">Додаток</h3>
           </div>
         </li>
-        <li><img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders"
+        <li class="portfolio-item"><img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders"
             width="370" height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Inspiration has no Borders</p>
             <h3 class="portfolio-title">Веб-сайт</h3>
           </div>
         </li>
-        <li><img class="portfolio-img" src="./images/edition-limited-edition.jpg" alt="Видання Limited Edition"
+        <li class="portfolio-item"><img class="portfolio-img" src="./images/edition-limited-edition.jpg" alt="Видання Limited Edition"
             width="370" height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Видання Limited Edition</p>
             <h3 class="portfolio-title">Дизайн</h3>
           </div>
         </li>
-        <li><img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370" height="294">
+        <li class="portfolio-item"><img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370" height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Проєкт LAB</p>
             <h3 class="portfolio-title">Маркетинг</h3>
           </div>
-        <li><img class="portfolio-img" src="./images/growing-business.jpg" alt="Growing Business" width="370"
+        <li class="portfolio-item"><img class="portfolio-img" src="./images/growing-business.jpg" alt="Growing Business" width="370"
             height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Growing Business</p>
@@ -102,14 +100,13 @@
     <a class="footer-logo" href="./index.html"><span class="footer-span">Web</span>Studio</a>
     <address class="address">
       <ul class="address-list">
-        <li>
+        <li class="address-item">
           <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
         </li>
-        <li><a class="address-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="address-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+        <li class="contact-item"><a class="address-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="contact-item"><a class="address-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
       </ul>
     </address>
   </footer>
 </body>
-
 </html>
