--- a/portfolio.html
+++ b/portfolio.html
@@ -103,8 +103,8 @@
         <li class="address-item">
           <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
         </li>
-        <li class="contact-item"><a class="address-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contact-item"><a class="address-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+        <li class="contact-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="contact-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
       </ul>
     </address>
   </footer>
