--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <header class="header">
+    <div class="container">
     <nav class="nav">
       <a href="#" class="header-logo"><span class="logo-span">Web</span>Studio</a>
       <ul class="nav-list">
@@ -28,13 +29,17 @@
       <li class="contact-item"><a href="malito:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
       <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38-096-111-11-11</a></li>
     </ul>
+  </div>
   </header>
   <main class="main">
     <section class="hero">
+      <div class="container">
       <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
       <button class="hero-button">Замовити послугу</button>
+    </div>
     </section>
     <section class="features">
+      <div class="container">
       <!-- Що ми пропонуємо  -->
       <ul class="features-list">
         <li class="features-item">
@@ -64,8 +69,10 @@
           </p>
         </li>
       </ul>
+    </div>
     </section>
     <section class="wat-we-do">
+      <div class="container">
 
       <!-- Чим ми займаємось -->
 
@@ -75,8 +82,10 @@
         <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/development.jpg" alt="Розробка" width="370"height="294"></li>
         <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/branding.jpg" alt="Брендинг" width="370"height="294"></li>
       </ul>
+    </div>
     </section>
     <section class="team">
+      <div class="container">
 
       <!-- Наша команда -->
 
@@ -104,10 +113,13 @@
           <h2 class="team-title">UI Designer</h2>
         </li>
       </ul>
+    </div>
     </section>
+ 
   </main>
   <footer class="footer">
     <section class="footer-content">
+      <div class="container">
       <a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a>
       <address class="address">
         <ul class="address-list">
@@ -118,6 +130,7 @@
           <li class="contact-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
         </ul>
       </address>
+    </div>
     </section>
   </footer>
 </html>
