--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
 </head>
 <body>
   <header class="header">
-    <div class="container">
-    <nav class="nav">
-      <a href="#" class="header-logo"><span class="logo-span">Web</span>Studio</a>
-      <ul class="nav-list">
-        <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
-        <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-        <li class="nav-item"><a href="#" class="nav-link"></a>Контакти</a></li>
-      </ul>
-    </nav>
-    <ul class="nav">
-      <li class="contact-item"><a href="malito:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-      <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38-096-111-11-11</a></li>
-    </ul>
-  </div>
+    <div class="container flex">
+      <nav class="nav">
+        <a href="#" class="header-logo"><span class="logo-span">Web</span>Studio</a>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
+          <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Контакти</a></li>
+        </ul>
+      </nav>
+      <!-- Обгортка для контактів -->
+      <div class="contacts">
+        <ul class="nav-list">
+          <li class="contact-item"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+          <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38-096-111-11-11</a></li>
+        </ul>
+      </div>
+    </div>
   </header>
   <main class="main">
     <section class="hero">
-      <div class="container">
+      <div class="container flex-hero">
       <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
       <button class="hero-button">Замовити послугу</button>
     </div>
@@ -120,14 +123,14 @@
   <footer class="footer">
     <section class="footer-content">
       <div class="container">
-      <a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a>
-      <address class="address">
+        <address class="address">
         <ul class="address-list">
+          <li class="footer-item"><a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a></li>
           <li class="address-item">
             <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
           </li>
-          <li class="contact-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contact-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+          <li class="footer-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="footer-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
         </ul>
       </address>
     </div>
