--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,8 @@
 <body>
   <header class="header">
     <div class="container flex">
-      <nav class="nav">
+      <div class="container-p">
+      <nav class="nav-p">
         <a href="#" class="header-logo"><span class="logo-span">Web</span>Studio</a>
         <ul class="nav-list">
           <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
@@ -25,23 +26,24 @@
       <div class="contacts">
         <ul class="nav-list">
           <li class="contact-item"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-          <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38-096-111-11-11</a></li>
+          <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38 096 111 11 11</a></li>
         </ul>
       </div>
+    </div>
     </div>
   </header>
   <main class="main">
     <!-- <h1>Панель пошуку</h1> -->
     <section class="portfolio">
       <div class="container">
-      <ul class="portfolio-list">
+      <ul class="portfolio-button-list portfolio-flex">
         <li><button class="portfolio-button">Усі</button></li>
         <li><button class="portfolio-button">Веб-сайти</button></li>
         <li><button class="portfolio-button">Додатки</button></li>
         <li><button class="portfolio-button">Дизайн</button></li>
         <li><button class="portfolio-button">Маркетинг</button></li>
       </ul>
-      <ul class="portfolio-list">
+      <ul class="portfolio-list portfolio-wrap">
         <li class="portfolio-item"><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
           <div class="portfolio-box">
             <p class="portfolio-description">Технокряк</p>
@@ -111,8 +113,8 @@
         <li class="address-item">
           <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
         </li>
-        <li class="contact-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contact-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+        <li class="footer-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="footer-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
       </ul>
     </address>
   </div>
