--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="header">
     <div class="container flex">
       <nav class="nav">
-        <a href="#" class="header-logo"><span class="logo-span">Web</span>Studio</a>
+        <a href="./index.html" class="header-logo"><span class="logo-span">Web</span>Studio</a>
         <ul class="nav-list">
           <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
           <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
@@ -93,7 +93,7 @@
       <!-- Наша команда -->
 
       <h2 class="team-hero-title">Наша команда</h2>
-      <ul class="team-list">
+      <ul class="team-list flex">
         <li class="team-item">
           <img class="team-img" src="./images/igor-demanko.jpg" alt="Ігор Дизайнер" width="270"height="260">
 
@@ -123,9 +123,9 @@
   <footer class="footer">
     <section class="footer-content">
       <div class="container">
+      <a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a>
         <address class="address">
         <ul class="address-list">
-          <li class="footer-item"><a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a></li>
           <li class="address-item">
             <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
           </li>
