--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <div class="container flex">
       <div class="container-p">
       <nav class="nav-p">
-        <a href="#" class="header-logo"><span class="logo-span">Web</span>Studio</a>
+        <a href="./index.html" class="header-logo"><span class="logo-span">Web</span>Studio</a>
         <ul class="nav-list">
           <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
           <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
