--- a/portfolio.html
+++ b/portfolio.html
@@ -1,123 +1,158 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="container flex">
       <div class="container-p">
-      <nav class="nav-p">
-        <a href="./index.html" class="header-logo"><span class="logo-span">Web</span>Studio</a>
-        <ul class="nav-list">
-          <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
-          <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Контакти</a></li>
-        </ul>
-      </nav>
-      <!-- Обгортка для контактів -->
-      <div class="contacts">
-        <ul class="nav-list">
-          <li class="contact-item"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-          <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38 096 111 11 11</a></li>
-        </ul>
+        <nav class="nav-p">
+          <a href="./index.html" class="header-logo"><span class="logo-span">Web</span>Studio</a>
+          <ul class="nav-list">
+            <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
+            <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Контакти</a></li>
+          </ul>
+        </nav>
+        <!-- Обгортка для контактів -->
+        <div class="contacts">
+          <ul class="nav-list">
+            <li class="contact-item"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
+            </li>
+            <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38 096 111 11 11</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
     </div>
   </header>
   <main class="main">
     <!-- <h1>Панель пошуку</h1> -->
     <section class="portfolio">
       <div class="container">
-      <ul class="portfolio-button-list portfolio-flex">
-        <li><button class="portfolio-button">Усі</button></li>
-        <li><button class="portfolio-button">Веб-сайти</button></li>
-        <li><button class="portfolio-button">Додатки</button></li>
-        <li><button class="portfolio-button">Дизайн</button></li>
-        <li><button class="portfolio-button">Маркетинг</button></li>
-      </ul>
-      <ul class="portfolio-list portfolio-wrap">
-        <li class="portfolio-item"><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Технокряк</p>
-            <h3 class="portfolio-title">Веб-сайт</h3>
-          </div>
-        </li>
-        <li class="portfolio-item"><img class="portfolio-img" src="./images/new-orlean-vs-golden-star-poster.jpg"
-            alt="Постер New Orlean vs Golden Star" width="370">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Постер New Orlean vs Golden Star</p>
-            <h3 class="portfolio-title">Дизайн</h3>
-          </div>
-        </li>
-        <li class="portfolio-item"><img class="portfolio-img" src="./images/seafood-restaurant.jpg" alt="Ресторан Seafood" width="370"
-            height="294">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Ресторан Seafood</p>
-            <h3 class="portfolio-title">Додаток</h3>
-          </div>
-        </li>
-        <li class="portfolio-item"><img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime" width="370" height="294">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Проєкт Prime</p>
-            <h3 class="portfolio-title">Маркетинг</h3>
-          </div>
-        <li class="portfolio-item">
-          <img class="portfolio-img" src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370" height="294">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Проєкт Boxes</p>
-            <h3 class="portfolio-title">Додаток</h3>
-          </div>
-        </li>
-        <li class="portfolio-item"><img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders"
-            width="370" height="294">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Inspiration has no Borders</p>
-            <h3 class="portfolio-title">Веб-сайт</h3>
-          </div>
-        </li>
-        <li class="portfolio-item"><img class="portfolio-img" src="./images/edition-limited-edition.jpg" alt="Видання Limited Edition"
-            width="370" height="294">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Видання Limited Edition</p>
-            <h3 class="portfolio-title">Дизайн</h3>
-          </div>
-        </li>
-        <li class="portfolio-item"><img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370" height="294">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Проєкт LAB</p>
-            <h3 class="portfolio-title">Маркетинг</h3>
-          </div>
-        <li class="portfolio-item"><img class="portfolio-img" src="./images/growing-business.jpg" alt="Growing Business" width="370"
-            height="294">
-          <div class="portfolio-box">
-            <p class="portfolio-description">Growing Business</p>
-            <h3 class="portfolio-title">Додаток</h3>
-          </div>
-      </ul>
-    </div>
+        <ul class="portfolio-button-list portfolio-flex">
+          <li><button class="portfolio-button">Усі</button></li>
+          <li><button class="portfolio-button">Веб-сайти</button></li>
+          <li><button class="portfolio-button">Додатки</button></li>
+          <li><button class="portfolio-button">Дизайн</button></li>
+          <li><button class="portfolio-button">Маркетинг</button></li>
+        </ul>
+        <ul class="portfolio-list portfolio-wrap">
+          <li class="portfolio-item">
+            <a href="#">
+            <div class="card-overlay-box"><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
+            </div>
+              <div class="portfolio-box">
+                <p class="portfolio-description">Технокряк</p>
+                <h3 class="portfolio-title">Веб-сайт</h3>
+              </div>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="#">
+            <div class="card-overlay-box"><img class="portfolio-img" src="./images/new-orlean-vs-golden-star-poster.jpg"
+              alt="Постер New Orlean vs Golden Star" width="370">
+            <div class="portfolio-box">
+              <p class="portfolio-description">Постер New Orlean vs Golden Star</p>
+              <h3 class="portfolio-title">Дизайн</h3>
+            </div>
+          </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="#">
+            <img class="portfolio-img" src="./images/seafood-restaurant.jpg"
+              alt="Ресторан Seafood" width="370" height="294">
+            <div class="portfolio-box">
+              <p class="portfolio-description">Ресторан Seafood</p>
+              <h3 class="portfolio-title">Додаток</h3>
+            </div>
+          </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="#">
+              <img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime"
+              width="370" height="294">
+            <div class="portfolio-box">
+              <p class="portfolio-description">Проєкт Prime</p>
+              <h3 class="portfolio-title">Маркетинг</h3>
+            </div>
+          </a>
+          <li class="portfolio-item">
+            <a href="#">
+            <img class="portfolio-img" src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370" height="294">
+            <div class="portfolio-box">
+              <p class="portfolio-description">Проєкт Boxes</p>
+              <h3 class="portfolio-title">Додаток</h3>
+            </div>
+          </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="#">
+              <img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg"
+              alt="Inspiration has no Borders" width="370" height="294">
+            <div class="portfolio-box">
+              <p class="portfolio-description">Inspiration has no Borders</p>
+              <h3 class="portfolio-title">Веб-сайт</h3>
+            </div>
+          </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="#">
+              <img class="portfolio-img" src="./images/edition-limited-edition.jpg"
+              alt="Видання Limited Edition" width="370" height="294">
+            <div class="portfolio-box">
+              <p class="portfolio-description">Видання Limited Edition</p>
+              <h3 class="portfolio-title">Дизайн</h3>
+            </div>
+          </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="#">
+              <img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370"
+              height="294">
+              <a href="#">
+            <div class="portfolio-box">
+              <p class="portfolio-description">Проєкт LAB</p>
+              <h3 class="portfolio-title">Маркетинг</h3>
+            </div>
+          </a>
+          <li class="portfolio-item">
+            <a href="#">
+             <img class="portfolio-img" src="./images/growing-business.jpg"
+              alt="Growing Business" width="370" height="294">
+            <div class="portfolio-box">
+              <p class="portfolio-description">Growing Business</p>
+              <h3 class="portfolio-title">Додаток</h3>
+            </div>
+          </a>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="footer">
     <div class="container">
-    <a class="footer-logo" href="./index.html"><span class="footer-span">Web</span>Studio</a>
-    <address class="address">
-      <ul class="address-list">
-        <li class="address-item">
-          <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
-        </li>
-        <li class="footer-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+      <a class="footer-logo" href="./index.html"><span class="footer-span">Web</span>Studio</a>
+      <address class="address">
+        <ul class="address-list">
+          <li class="address-item">
+            <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
+          </li>
+          <li class="footer-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
           <li class="footer-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
-      </ul>
-    </address>
-  </div>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
+
 </html>
