--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
       <div class="container">
       <!-- Що ми пропонуємо  -->
       <ul class="features-list">
-        <li class="features-item item1">
+        <li class="features-item">
           <h2 class="features-title">Увага до деталей</h2>
           <p class="features-description">
             Ідейні міркування, і навіть початок повсякденної роботи з
             формування позиції.
           </p>
         </li>
-        <li class="features-item item2">
+        <li class="features-item">
           <h2 class="features-title">Пунктуальність</h2>
           <p class="features-description">
             Завдання організації, особливо рамки і місце навчання кадрів тягне
             у себе.
           </p>
         </li>
-        <li class="features-item item3">
+        <li class="features-item">
           <h2 class="features-title">Планування</h2>
           <p class="features-description">
             Так само консультація з широким активом значною мірою зумовлює.
           </p>
         </li>
-        <li class="features-item item4">
+        <li class="features-item">
           <h2 class="features-title">Сучасні технології</h2>
           <p class="features-description">
             Значимість цих проблем настільки очевидна, що реалізація планових завдань.
