--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,9 @@
         <ul class="portfolio-list portfolio-wrap">
           <li class="portfolio-item">
             <a class="item-link" href="#">
-            <div class="card-overlay-box"><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294">
-            </div>
+              <div class="card-overlay-box"><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк"
+                  width="370" height="294">
+              </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Технокряк</p>
                 <h3 class="portfolio-title">Веб-сайт</h3>
@@ -60,81 +61,79 @@
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-            <div class="card-overlay-box"><img class="portfolio-img" src="./images/new-orlean-vs-golden-star-poster.jpg"
-              alt="Постер New Orlean vs Golden Star" width="370">
-            <div class="portfolio-box">
-              <p class="portfolio-description">Постер New Orlean vs Golden Star</p>
-              <h3 class="portfolio-title">Дизайн</h3>
-            </div>
-          </a>
+              <div class="card-overlay-box"><img class="portfolio-img"
+                  src="./images/new-orlean-vs-golden-star-poster.jpg" alt="Постер New Orlean vs Golden Star"
+                  width="370">
+                <div class="portfolio-box">
+                  <p class="portfolio-description">Постер New Orlean vs Golden Star</p>
+                  <h3 class="portfolio-title">Дизайн</h3>
+                </div>
+            </a>
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-            <img class="portfolio-img" src="./images/seafood-restaurant.jpg"
-              alt="Ресторан Seafood" width="370" height="294">
-            <div class="portfolio-box">
-              <p class="portfolio-description">Ресторан Seafood</p>
-              <h3 class="portfolio-title">Додаток</h3>
-            </div>
-          </a>
+              <img class="portfolio-img" src="./images/seafood-restaurant.jpg" alt="Ресторан Seafood" width="370"
+                height="294">
+              <div class="portfolio-box">
+                <p class="portfolio-description">Ресторан Seafood</p>
+                <h3 class="portfolio-title">Додаток</h3>
+              </div>
+            </a>
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-              <img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime"
-              width="370" height="294">
-            <div class="portfolio-box">
-              <p class="portfolio-description">Проєкт Prime</p>
-              <h3 class="portfolio-title">Маркетинг</h3>
-            </div>
-          </a>
+              <img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime" width="370" height="294">
+              <div class="portfolio-box">
+                <p class="portfolio-description">Проєкт Prime</p>
+                <h3 class="portfolio-title">Маркетинг</h3>
+              </div>
+            </a>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-            <img class="portfolio-img" src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370" height="294">
-            <div class="portfolio-box">
-              <p class="portfolio-description">Проєкт Boxes</p>
-              <h3 class="portfolio-title">Додаток</h3>
-            </div>
-          </a>
+              <img class="portfolio-img" src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370" height="294">
+              <div class="portfolio-box">
+                <p class="portfolio-description">Проєкт Boxes</p>
+                <h3 class="portfolio-title">Додаток</h3>
+              </div>
+            </a>
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-              <img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg"
-              alt="Inspiration has no Borders" width="370" height="294">
-            <div class="portfolio-box">
-              <p class="portfolio-description">Inspiration has no Borders</p>
-              <h3 class="portfolio-title">Веб-сайт</h3>
-            </div>
-          </a>
+              <img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders"
+                width="370" height="294">
+              <div class="portfolio-box">
+                <p class="portfolio-description">Inspiration has no Borders</p>
+                <h3 class="portfolio-title">Веб-сайт</h3>
+              </div>
+            </a>
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-              <img class="portfolio-img" src="./images/edition-limited-edition.jpg"
-              alt="Видання Limited Edition" width="370" height="294">
-            <div class="portfolio-box">
-              <p class="portfolio-description">Видання Limited Edition</p>
-              <h3 class="portfolio-title">Дизайн</h3>
-            </div>
-          </a>
+              <img class="portfolio-img" src="./images/edition-limited-edition.jpg" alt="Видання Limited Edition"
+                width="370" height="294">
+              <div class="portfolio-box">
+                <p class="portfolio-description">Видання Limited Edition</p>
+                <h3 class="portfolio-title">Дизайн</h3>
+              </div>
+            </a>
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-              <img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370"
-              height="294">
-              <a href="#">
-            <div class="portfolio-box">
-              <p class="portfolio-description">Проєкт LAB</p>
-              <h3 class="portfolio-title">Маркетинг</h3>
-            </div>
-          </a>
+              <img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370" height="294">
+              <div class="portfolio-box">
+                <p class="portfolio-description">Проєкт LAB</p>
+                <h3 class="portfolio-title">Маркетинг</h3>
+              </div>
+            </a>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-             <img class="portfolio-img" src="./images/growing-business.jpg"
-              alt="Growing Business" width="370" height="294">
-            <div class="portfolio-box">
-              <p class="portfolio-description">Growing Business</p>
-              <h3 class="portfolio-title">Додаток</h3>
-            </div>
-          </a>
+              <img class="portfolio-img" src="./images/growing-business.jpg" alt="Growing Business" width="370"
+                height="294">
+              <div class="portfolio-box">
+                <p class="portfolio-description">Growing Business</p>
+                <h3 class="portfolio-title">Додаток</h3>
+              </div>
+            </a>
         </ul>
       </div>
     </section>
