--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
   <title>WebStudio</title>
   <!--! Спочатку нормалізатор -->
   <!--! завантаження modern-normalize -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="container flex">
@@ -37,103 +41,107 @@
   <main class="main">
     <section class="hero">
       <div class="container flex-hero">
-      <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-      <button class="hero-button">Замовити послугу</button>
-    </div>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-button">Замовити послугу</button>
+      </div>
     </section>
     <section class="features">
       <div class="container">
-      <!-- Що ми пропонуємо  -->
-      <ul class="features-list">
-        <li class="features-item">
-          <h2 class="features-title">Увага до деталей</h2>
-          <p class="features-description">
-            Ідейні міркування, і навіть початок повсякденної роботи з
-            формування позиції.
-          </p>
-        </li>
-        <li class="features-item">
-          <h2 class="features-title">Пунктуальність</h2>
-          <p class="features-description">
-            Завдання організації, особливо рамки і місце навчання кадрів тягне
-            у себе.
-          </p>
-        </li>
-        <li class="features-item">
-          <h2 class="features-title">Планування</h2>
-          <p class="features-description">
-            Так само консультація з широким активом значною мірою зумовлює.
-          </p>
-        </li>
-        <li class="features-item">
-          <h2 class="features-title">Сучасні технології</h2>
-          <p class="features-description">
-            Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-          </p>
-        </li>
-      </ul>
-    </div>
+        <!-- Що ми пропонуємо  -->
+        <ul class="features-list">
+          <li class="features-item">
+            <h2 class="features-title">Увага до деталей</h2>
+            <p class="features-description">
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li class="features-item">
+            <h2 class="features-title">Пунктуальність</h2>
+            <p class="features-description">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li class="features-item">
+            <h2 class="features-title">Планування</h2>
+            <p class="features-description">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li class="features-item">
+            <h2 class="features-title">Сучасні технології</h2>
+            <p class="features-description">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="wat-we-do">
       <div class="container">
 
-      <!-- Чим ми займаємось -->
+        <!-- Чим ми займаємось -->
 
-      <h2 class="wat-we-do-title">Чим ми займаємося</h2>
-      <ul class="wat-we-do-list">
-        <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/web-design.jpg" alt="Веб-дизайн" width="370"height="294"></li>
-        <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/development.jpg" alt="Розробка" width="370"height="294"></li>
-        <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/branding.jpg" alt="Брендинг" width="370"height="294"></li>
-      </ul>
-    </div>
+        <h2 class="wat-we-do-title">Чим ми займаємося</h2>
+        <ul class="wat-we-do-list">
+          <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/web-design.jpg" alt="Веб-дизайн"
+              width="370" height="294"></li>
+          <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/development.jpg" alt="Розробка"
+              width="370" height="294"></li>
+          <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/branding.jpg" alt="Брендинг" width="370"
+              height="294"></li>
+        </ul>
+      </div>
     </section>
     <section class="team">
       <div class="container">
 
-      <!-- Наша команда -->
+        <!-- Наша команда -->
 
-      <h2 class="team-hero-title">Наша команда</h2>
-      <ul class="team-list flex">
-        <li class="team-item">
-          <img class="team-img" src="./images/igor-demanko.jpg" alt="Ігор Дизайнер" width="270"height="260">
+        <h2 class="team-hero-title">Наша команда</h2>
+        <ul class="team-list flex">
+          <li class="team-item">
+            <img class="team-img" src="./images/igor-demanko.jpg" alt="Ігор Дизайнер" width="270" height="260">
 
-          <p class="team-description">Ігор Дем'яненко</p>
-          <h2 class="team-title">Product Designer</h2>
-        </li>
-        <li class="team-item">
-          <img class="team-img" src="./images/olga-repina.jpg" alt="Олена Розробник" width="270"height="260">
-          <p class="team-description">Ольга Рєпіна</p>
-          <h2 class="team-title">Frontend Developer</h2>
-        </li>
-        <li class="team-item">
-          <img class="team-img" src="./images/mikola-tarasov.jpg" alt="Микола Маркетолог" width="270"height="260">
-          <p class="team-description">Микола Тарасов</p>
-          <h2 class="team-title">Marketing</h2>
-        </li>
-        <li class="team-item">
-          <img class="team-img" src="./images/mihailo.jpg" alt="Михайло Бренд-менеджер" width="270"height="260">
-          <p class="team-description"> Михайло Єрмаков</p>
-          <h2 class="team-title">UI Designer</h2>
-        </li>
-      </ul>
-    </div>
+            <p class="team-description">Ігор Дем'яненко</p>
+            <h2 class="team-title">Product Designer</h2>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="./images/olga-repina.jpg" alt="Олена Розробник" width="270" height="260">
+            <p class="team-description">Ольга Рєпіна</p>
+            <h2 class="team-title">Frontend Developer</h2>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="./images/mikola-tarasov.jpg" alt="Микола Маркетолог" width="270" height="260">
+            <p class="team-description">Микола Тарасов</p>
+            <h2 class="team-title">Marketing</h2>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="./images/mihailo.jpg" alt="Михайло Бренд-менеджер" width="270" height="260">
+            <p class="team-description"> Михайло Єрмаков</p>
+            <h2 class="team-title">UI Designer</h2>
+          </li>
+        </ul>
+      </div>
     </section>
- 
+
   </main>
   <footer class="footer">
     <section class="footer-content">
       <div class="container">
-      <a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a>
+        <a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a>
         <address class="address">
-        <ul class="address-list">
-          <li class="address-item">
-            <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
-          </li>
-          <li class="footer-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="footer-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
-        </ul>
-      </address>
-    </div>
+          <ul class="address-list">
+            <li class="address-item">
+              <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
+            </li>
+            <li class="footer-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="footer-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </section>
   </footer>
+
 </html>
