--- a/index.html
+++ b/index.html
@@ -32,8 +32,20 @@
       <!-- Обгортка для контактів -->
       <div class="contacts">
         <ul class="nav-list">
-          <li class="contact-item"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-          <li class="contact-item"><a href="tel:+38-096-111-11-11" class="address-link">+38 096 111 11 11</a></li>
+          <li class="contact-item">
+            <a href="mailto:info@devstudio.com" class="address-link">
+              <svg class="envelope" width="16" height="12">  
+               <use href="./svg/symbol-defs.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a></li>
+          <li class="contact-item">
+            <a href="tel:+38-096-111-11-11" class="address-link">
+              <svg class="smartphone" width="10" height="16">  
+               <use href="./svg/symbol-defs.svg#smartphone"></use>
+              </svg>
+               +38 096 111 11 11
+            </a>
+          </li>
         </ul>
       </div>
     </div>
