--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@
         <ul class="nav-list">
           <li class="contact-item">
             <a href="mailto:info@devstudio.com" class="address-link">
-              <svg class="envelope" width="16" height="12">  
-               <use href="./svg/symbol-defs.svg#envelope"></use>
+              <svg class="envelope" width="16" height="12">
+                <use href="./svg/symbol-defs.svg#envelope"></use>
               </svg>
-              info@devstudio.com</a></li>
+              info@devstudio.com</a>
+          </li>
           <li class="contact-item">
             <a href="tel:+38-096-111-11-11" class="address-link">
-              <svg class="smartphone" width="10" height="16">  
-               <use href="./svg/symbol-defs.svg#smartphone"></use>
+              <svg width="10" height="16">
+                 <use href="./svg/symbol-defs.svg#smartphone"></use>
               </svg>
-               +38 096 111 11 11
-            </a>
-          </li>
+
+              +38 096 111 11 11</a>
+            </li>
         </ul>
       </div>
     </div>
@@ -118,21 +119,77 @@
 
             <p class="team-description">Ігор Дем'яненко</p>
             <h2 class="team-title">Product Designer</h2>
+            <div>
+                <svg width="20" height="20">
+                 <use href="./svg/symbol-defs.svg#instagram"></use>
+              </svg>
+              <svg width="20" height="16.25">
+                 <use href="./svg/symbol-defs.svg#twitter"></use>
+              </svg>
+              <svg width="10" height="20">
+                 <use href="./svg/symbol-defs.svg#facebook"></use>
+              </svg>
+              <svg width="20" height="20 ">
+                 <use href="./svg/symbol-defs.svg#linkedin"></use>
+              </svg>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/olga-repina.jpg" alt="Олена Розробник" width="270" height="260">
             <p class="team-description">Ольга Рєпіна</p>
             <h2 class="team-title">Frontend Developer</h2>
+            <div>
+                <svg width="20" height="20">
+                 <use href="./svg/symbol-defs.svg#instagram"></use>
+              </svg>
+              <svg width="20" height="16.25">
+                 <use href="./svg/symbol-defs.svg#twitter"></use>
+              </svg>
+              <svg width="10" height="20">
+                 <use href="./svg/symbol-defs.svg#facebook"></use>
+              </svg>
+              <svg width="20" height="20 ">
+                 <use href="./svg/symbol-defs.svg#linkedin"></use>
+              </svg>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/mikola-tarasov.jpg" alt="Микола Маркетолог" width="270" height="260">
             <p class="team-description">Микола Тарасов</p>
             <h2 class="team-title">Marketing</h2>
+            <div>
+                <svg width="20" height="20">
+                 <use href="./svg/symbol-defs.svg#instagram"></use>
+              </svg>
+              <svg width="20" height="16.25">
+                 <use href="./svg/symbol-defs.svg#twitter"></use>
+              </svg>
+              <svg width="10" height="20">
+                 <use href="./svg/symbol-defs.svg#facebook"></use>
+              </svg>
+              <svg width="20" height="20 ">
+                 <use href="./svg/symbol-defs.svg#linkedin"></use>
+              </svg>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/mihailo.jpg" alt="Михайло Бренд-менеджер" width="270" height="260">
             <p class="team-description"> Михайло Єрмаков</p>
             <h2 class="team-title">UI Designer</h2>
+            <div>
+                <svg width="20" height="20">
+                 <use href="./svg/symbol-defs.svg#instagram"></use>
+              </svg>
+              <svg width="20" height="16.25">
+                 <use href="./svg/symbol-defs.svg#twitter"></use>
+              </svg>
+              <svg width="10" height="20">
+                 <use href="./svg/symbol-defs.svg#facebook"></use>
+              </svg>
+              <svg width="20" height="20 ">
+                 <use href="./svg/symbol-defs.svg#linkedin"></use>
+              </svg>
+            </div>
           </li>
         </ul>
       </div>
@@ -155,5 +212,5 @@
       </div>
     </section>
   </footer>
-
+</body>
 </html>
